--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server1.js"
   },
   "author": "Sarika",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mongoose": "^6.7.2",
     "yup": "^0.32.11"
   },
   "repository": {
